# Data_Science

./: .dockerignore  .env.example  .gitignore  CI_CD.md  DataCleaning.py  DataCollection.py  DataTransformation.py  DataUndersampling.py  DataValidation.py  Dockerfile  EDA.py  Makefile  Model.py  README.md  cloudbuild.yaml  cloudrun.yaml  model.pkl  notes.txt  pipeline_run.ps1  pyproject.toml  requirements-api.txt  streamlit_app.py
.github/workflows/: tests.yml
app/: main.py
models/: model.pkl
src/: DataCleaning.py  DataCollection.py  DataTransformation.py  DataValidation.py  Model.py
tests/: test_data_cleaning.py  test_data_collection.py  test_data_transformation.py  test_data_undersampling.py  test_data_validation.py  test_eda.py  test_model.py
