[project]
name = "data-science-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Team Ronix"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "great-expectations (>=1.17.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
