[project]
name = "Data_Science"
version = "0.1.0"
description = ""
authors = [
    {name = "Team Ronix"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "great-expectations (>=1.17.0,<2.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "holoviews (>=1.22.1,<2.0.0)",
    "hvplot (>=0.12.2,<0.13.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
